# hermes-agent

./: hermes  model_tools.py  pyproject.toml  serve.py
docs/superpowers/plans/: 2026-04-07-core-simplification-plan.md
docs/superpowers/specs/: 2026-04-07-core-simplification-design.md
gateway/: run.py
hermes_cli/: main.py
